--- a/gallery.html
+++ b/gallery.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bilal Ethiopian Kitchen - Gallery</title>
+    <title>Bilal Habeshan Kitchen - Gallery</title>
     <link rel="stylesheet" href="./css/styles.css">
 <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
 
@@ -85,7 +85,7 @@
                     <h3>Student Information</h3>
                     <ul>
                         <li><strong>Name:</strong> <span id="student-name">Bilal Jemal</span></li>
-                        <li><strong>ID:</strong> <span id="student-id">UGR/187943</span></li>
+                        <li><strong>ID:</strong> <span id="student-id">UGR/187943/16</span></li>
                         <li><strong>Department:</strong> <span id="student-college">Computer Science</span></li>
                     </ul>
                 </div>
