--- a/location.html
+++ b/location.html
@@ -60,7 +60,7 @@
                     <div class="footer-item">
                         <!-- email icon -->
                         <svg class="icon" viewBox="0 0 24 24" aria-hidden="true" focusable="false"><path d="M20 4H4a2 2 0 00-2 2v12a2 2 0 002 2h16a2 2 0 002-2V6a2 2 0 00-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/></svg>
-                        <span>info@bilalhabeshanfoods.com</span>
+                        <span>info@bilalhabeshankitchen.com</span>
                     </div>
                 </div>
             </div>
