--- a/location.html
+++ b/location.html
@@ -23,7 +23,7 @@
         </nav>
     </header>
     <section class="content-section" id="contact-page">
-        <h2>Location & Contact</h2>
+        <h2>Location </h2>
         
         <div class="contact-flex">
             <div class="contact-info">
