--- a/gallery.html
+++ b/gallery.html
@@ -25,7 +25,7 @@
     </header>
 
     <section class="content-section" id="gallery-page">
-        <h2>Gallery & Ambiance</h2>
+        <h2>Gallery & Vibes</h2>
         <p>A look at our traditional dishes, communal platters, and the coffee ceremony.</p>
 
         <div class="image-grid">
