--- a/location.html
+++ b/location.html
@@ -28,7 +28,7 @@
         <div class="contact-flex">
             <div class="contact-info">
                 <h3>Get In Touch</h3>
-                <p><strong>Address:</strong> Arid Street</p>
+                <p><strong>Address:</strong> Arid Street, Mekelle, Tigray, Ethiopia</p>
                 <p><strong>Phone:</strong> (+251) 900-0000-00</p>
                 <p><strong>Email:</strong> info@bilalhabeshanfoods.com</p>
 
