--- a/location.html
+++ b/location.html
@@ -30,7 +30,7 @@
                 <h3>Get In Touch</h3>
                 <p><strong>Address:</strong> Arid Street, Mekelle, Tigray, Ethiopia</p>
                 <p><strong>Phone:</strong> (+251) 900-0000-00</p>
-                <p><strong>Email:</strong> info@bilalhabeshanfoods.com</p>
+                <p><strong>Email:</strong> info@bilalhabeshankitchen.com</p>
 
                 <h3>Opening Hours</h3>
                 <p>Mon - Fri: 12:00 AM - 3:00 PM</p>
