--- a/contact.html
+++ b/contact.html
@@ -64,7 +64,7 @@
     </section>
 
     <footer>
-        <p>Arid Street, Mekelle, Tigray | (+251) 900-0000-00</p>
+        <p>Arid Street, Mekelle, Tigray, Ethiopia | (+251) 900-0000-00</p>
         <p>&copy; 2025 Bilal Habeshan Kitchen. All Rights Reserved.</p>
     </footer>
 
