--- a/menu.html
+++ b/menu.html
@@ -32,10 +32,11 @@
             <p class="menu-subtitle">Authentic Ethiopian Flavors • Traditional Recipes • Fresh Ingredients</p>
         </div>
         
-        <!-- Main Dishes -->
-        <div class="menu-category">
-            <div class="category-title">
-                <h3>Main Dishes</h3>
+        <div class="menu-category main-dishes-category">
+    <h3><span class="category-icon">🍛</span> Main Dishes</h3>
+    <!-- Keep all your menu items here -->
+</
+
                 <p class="category-description">All main dishes served with injera and traditional sides</p>
             </div>
             
