--- a/menu.html
+++ b/menu.html
@@ -79,12 +79,10 @@
                 </div>
                 <span class="item-price">1199.99 BIRR</span>
             </div>
-        </div>
+        <div class="menu-category side-dishes-category">
+    <h3><span class="category-icon">🥗</span> Side Dishes</h3>
+    <!-- Keep all your menu items here -->
 
-        <!-- Side Dishes -->
-        <div class="menu-category">
-            <div class="category-title">
-                <h3>Side Dishes</h3>
                 <p class="category-description">Perfect complements to enhance your meal</p>
             </div>
             
