--- a/menu.html
+++ b/menu.html
@@ -116,11 +116,10 @@
             <div class="category-title">
                 <h3>Beverages</h3>
                 <p class="category-description">Traditional and refreshing drinks</p>
-            </div>
-            
-            <div class="menu-item">
-                <div class="item-details">
-                    <h4>Bunna (Ethiopian Coffee)</h4>
+            <div class="menu-category beverages-category">
+    <h3><span class="category-icon">☕</span> Beverages</h3>
+    <!-- Keep all your menu items here -->
+
                     <p class="item-description">Freshly roasted and brewed Ethiopian coffee served traditionally with incense.</p>
                 </div>
                 <span class="item-price">25.00 BIRR</span>
