--- a/menu.html
+++ b/menu.html
@@ -41,8 +41,10 @@
             </div>
             
             <div class="menu-item">
-                <div class="item-details">
-                    <h4>Doro Wat <span class="dish-tag spicy">Spicy</span></h4>
+    <h4>Doro Wat <span class="spicy-tag">🌶️ Spicy</span></h4>
+    <p>Spicy Ethiopian chicken stew...</p>
+    <span class="item-price">1499.99 BIRR</span>
+
                     <p class="item-description">Spicy Ethiopian chicken stew simmered in berbere and clarified butter, served with injera and hard-boiled egg.</p>
                 </div>
                 <span class="item-price">1499.99 BIRR</span>
