--- a/menu.html
+++ b/menu.html
@@ -43,7 +43,8 @@
             <div class="menu-item">
     <h4>Doro Wat <span class="spicy-tag">🌶️ Spicy</span></h4>
     <p>Spicy Ethiopian chicken stew...</p>
-    <span class="item-price">1499.99 BIRR</span>
+    <span class="item-price">1499.99 BIRR</span> 
+</div>
 
                     <p class="item-description">Spicy Ethiopian chicken stew simmered in berbere and clarified butter, served with injera and hard-boiled egg.</p>
                 </div>
