--- a/menu.html
+++ b/menu.html
@@ -87,13 +87,11 @@
     <!-- Keep all your menu items here -->
 
                 <p class="category-description">Perfect complements to enhance your meal</p>
-            </div>
-            
             <div class="menu-item">
-                <div class="item-details">
-                    <h4>Fresh Salad</h4>
-                    <p class="item-description">Crisp mixed greens with tomato, cucumber, red onion, and lemon-herb dressing.</p>
-                </div>
+    <h4>Salad <span class="fresh-tag">🥬 Fresh</span></h4>
+    <p>Fresh mixed greens...</p>
+    <span class="item-price">79.99 BIRR</span>
+</div>
                 <span class="item-price">79.99 BIRR</span>
             </div>
             
