--- a/menu.html
+++ b/menu.html
@@ -124,13 +124,11 @@
                     <p class="item-description">Freshly roasted and brewed Ethiopian coffee served traditionally with incense.</p>
                 </div>
                 <span class="item-price">25.00 BIRR</span>
-            </div>
-            
             <div class="menu-item">
-                <div class="item-details">
-                    <h4>Tea</h4>
-                    <p class="item-description">Black tea brewed with cardamom and cinnamon, served with honey on request.</p>
-                </div>
+    <h4>Bunna <span class="hot-tag">🔥 Hot</span></h4>
+    <p>Freshly roasted coffee...</p>
+    <span class="item-price">25.00 BIRR</span>
+</div>
                 <span class="item-price">15.00 BIRR</span>
             </div>
             
