--- a/menu.html
+++ b/menu.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bilal Ethiopian Kitchen - Menu</title>
+    <title>Bilal Habeshan Kitchen - Menu</title>
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
 
     <header>
         <nav>
-            <h1>Bilal Ethiopian Kitchen</h1>
+            <h1>Bilal Habeshan Kitchen</h1>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="menu.html">Menu</a></li>
@@ -115,7 +115,7 @@
                     <div class="footer-item">
                         <!-- email icon -->
                         <svg class="icon" viewBox="0 0 24 24" aria-hidden="true" focusable="false"><path d="M20 4H4a2 2 0 00-2 2v12a2 2 0 002 2h16a2 2 0 002-2V6a2 2 0 00-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/></svg>
-                        <span>info@bilalhabeshanfoods.com</span>
+                        <span>info@bilalhabeshankitchen.com</span>
                     </div>
                 </div>
             </div>
@@ -131,7 +131,7 @@
                 </div>
             </div>
         </div>
-        <p>&copy; 2025 Bilal Ethiopian Kitchen. All Rights Reserved.</p>
+        <p>&copy; 2025 Bilal Habeshan Kitchen. All Rights Reserved.</p>
     </footer>
 
 </body>
