--- a/menu.html
+++ b/menu.html
@@ -126,6 +126,8 @@
                     <ul>
                         <li><strong>Name:</strong> <span id="student-name">Bilal Jemal</span></li>
                         <li><strong>ID:</strong> <span id="student-id">UGR/187943/16</span></li>
+<li><strong>Section:</strong> <span id="student-class">2</span></li>
+<li><strong>Instructor:</strong> <span id="teacher-name">Fanuel belay</span></li>
                         <li><strong>Department:</strong> <span id="student-college">Computer Science</span></li>
                     </ul>
                 </div>
