--- a/gallery.html
+++ b/gallery.html
@@ -17,7 +17,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="menu.html">Menu</a></li>
                 <li><a href="about.html">About Us</a></li>
-                <li><a href="gallery.html">Gallery</a></li>
+                <li><a href="gallery.html" class="active-page">Gallery</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="location.html">Location</a></li>
             </ul>
