--- a/gallery.html
+++ b/gallery.html
@@ -15,11 +15,12 @@
             <h1>Bilal Habeshan Kitchen</h1>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="menu.html">Menu</a></li>
-                <li><a href="about.html">About Us</a></li>
-                <li><a href="gallery.html" class="active-page">Gallery</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <li><a href="location.html">Location</a></li>
+                <li><a href="index.html">Home</a></li>
+        <li><a href="menu.html">Menu</a></li>
+        <li><a href="about.html">About Us</a></li>
+        <li><a href="gallery.html" class="active-page">Gallery</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><a href="location.html">Location</a></li>
             </ul>
         </nav>
     </header>
